policies/standard/general_resources_limit_cpu/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sGeneralResourcesLimitCpuPolicy
metadata:
  name: k8sgeneralresourceslimitcpupolicy
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod", "ReplicationController"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet", "ReplicaSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    excludedNamespaces: []
