policies/standard/general_resources_limit_cpu/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sgeneralresourceslimitcpupolicy
  annotations:
    description: >-
      CPU limit enabled
spec:
  crd:
    spec:
      names:
        kind: K8sGeneralResourcesLimitCpuPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sgeneralresourceslimitcpupolicy

        violation[{"msg": msg}] {
          c := input_containers[_]
          not input_limits_cpu(c)
          msg := sprintf("CPU limit must be enabled: %v", [c.name])
        }

        input_limits_cpu(c){
          c.resources.limits.cpu
        }

        input_containers[c] {
            c := input.review.object.spec.containers[_]
        }
        input_containers[c] {
            c := input.review.object.spec.initContainers[_]
        }
        input_containers[c] {
            input.review.object.kind != "Pod"
            input.review.object.kind != "CronJob"
            c := input.review.object.spec.template.spec.containers[_]
        }
        input_containers[c] {
            input.review.object.kind != "Pod"
            input.review.object.kind != "CronJob"
            c := input.review.object.spec.template.spec.initContainers[_]
        }
        input_containers[c] {
            input.review.object.kind == "CronJob"
            c := input.review.object.spec.jobTemplate.spec.template.spec.containers[_]
        }
        input_containers[c] {
            input.review.object.kind == "CronJob"
            c := input.review.object.spec.jobTemplate.spec.template.spec.initContainers[_]
        }
